--- a/less/inc/navbar.less
+++ b/less/inc/navbar.less
@@ -122,10 +122,11 @@ li.home-link:hover i {
 
   img {
     display: block;
-    height: @navbarHeight;
+    height: (@navbarHeight - 16px);
     width: auto;
-    padding-left: 5px;
     padding-right: 5px;
+    padding-bottom: 8px;
+    padding-top: 8px;
   }
 }
 
